--- a/segmentImages.ipynb
+++ b/segmentImages.ipynb
@@ -3,17 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb569bc-b882-4b30-a42a-944a4c38df95",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['KMP_DUPLICATE_LIB_OK']='True'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cbfffb2a-738c-477f-a6e7-e5b3e6722a98",
    "metadata": {},
    "outputs": [],
@@ -22,7 +11,10 @@
     "import math\n",
     "import numpy as np\n",
     "import keras_ocr\n",
-    "import cv2"
+    "import cv2\n",
+    "import os\n",
+    "import skimage.io\n",
+    "from skimage import measure"
    ]
   },
   {
@@ -32,13 +24,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def midpoint(x1, y1, x2, y2):\n",
     "    x_mid = int((x1 + x2)/2)\n",
     "    y_mid = int((y1 + y2)/2)\n",
     "    return (x_mid, y_mid)\n",
     "pipeline = keras_ocr.pipeline.Pipeline()\n",
-    "def inpaint_text(img_path, pipeline):\n",
+    "\n",
+    "def remove_text(img_path, pipeline):\n",
     "    # read image\n",
     "    img = keras_ocr.tools.read(img_path)\n",
     "    # generate (word, box) tuples \n",
@@ -69,7 +61,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "#create images without words\n",
+    "directory = \"images/segmentationImages\"\n",
+    "pipeline = keras_ocr.pipeline.Pipeline()\n",
+    "for photo_file in os.listdir(directory):\n",
+    "    if photo_file.startswith(\"img\"):\n",
+    "        path = os.path.join(directory,photo_file,\"input.png\")\n",
+    "        img = remove_text(path,pipeline)  #returned image is inverted\n",
+    "        img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB) #convert to RGB\n",
+    "        out_path = os.path.join(directory,photo_file,\"noWordsOuput.png\")\n",
+    "        cv2.imwrite(out_path,img_rgb)"
    ]
   },
   {
@@ -78,7 +79,42 @@
    "id": "69357e06-42a6-4aa0-9ee7-8c11a71d4fc1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_properties(img_path):\n",
+    "    # Load image\n",
+    "    img = skimage.io.imread(img_path)\n",
+    "    # Convert to binary image\n",
+    "    bwimg = img > skimage.filters.threshold_otsu(img)\n",
+    "    # Compute region properties\n",
+    "    stats = measure.regionprops(bwimg)\n",
+    "\n",
+    "    return stats\n",
+    "\n",
+    "def annotate_center(img_path, stats, out_path):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.imshow(img_path)\n",
+    "    for obj in stats:\n",
+    "        y, x = obj.centroid\n",
+    "        ax.plot(x, y, 'ro')\n",
+    "    plt.save_fig(out_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98544ea1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#annotate center\n",
+    "directory = \"images/segmentationImages\"\n",
+    "for photo_file in os.listdir(directory):\n",
+    "    if photo_file.startswith(\"img\"):\n",
+    "        img_path = os.path.join(directory,photo_file,\"noWordsOuput.png\")\n",
+    "        stats = get_properties(img_path)\n",
+    "        out_path = os.path.join(directory,photo_file,\"annotateCenterOuput.png\")\n",
+    "        annotate_center(img_path,stats,out_path)"
+   ]
   }
  ],
  "metadata": {
